--- a/Python_0_Cases_+_Certificacao.ipynb
+++ b/Python_0_Cases_+_Certificacao.ipynb
@@ -7,11 +7,9 @@
       "collapsed_sections": [
         "s7GVtI63aEvh",
         "mFCSUDTOZ_BM",
-        "6Ul_h_Sem4x9",
-        "bq775NYqQYto",
-        "4nF0a97CsMiz"
+        "6Ul_h_Sem4x9"
       ],
-      "authorship_tag": "ABX9TyO1giiArKe8EmeDsauzfCPb",
+      "authorship_tag": "ABX9TyP6G1fpVqyovepzcecN8AXv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -299,68 +297,6 @@
         "print(requisi)\n",
         "print(qtd)"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Prova Certificado"
-      ],
-      "metadata": {
-        "id": "4nF0a97CsMiz"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dicionario={'pessoa_1':{'nome':'Peterson','sobrenome':'Almeida'}, 'pessoa_2':{'nome':'Maria','sobrenome':'Silva'}, 'pessoa_3':{'nome':'Jose','sobrenome':'Santos'}}\n",
-        "nome_completo=[]\n",
-        "for a,b in dicionario.items():\n",
-        "  nome_completo.append(str(b['nome']) + str(b['sobrenome']))\n",
-        "  print(nome_completo)"
-      ],
-      "metadata": {
-        "id": "8G4AF0kBsZAD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "t1 = ('Banana', 'Abacate', 'Morango') #tupla\n",
-        "posicao = t1.index('Morango')\n",
-        "terceiroelemento = t1[3]\n",
-        "print(posicao, terceiroelemento)"
-      ],
-      "metadata": {
-        "id": "qCyezVlzsfXW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def contador_x (lista1, lista2,x):\n",
-        " contador=0\n",
-        " for a,b in zip(lista1, lista2):\n",
-        "   if a==x and b==x:\n",
-        "    break\n",
-        "   else:\n",
-        "     contador+=1\n",
-        " return contador\n",
-        "\n",
-        "\n",
-        "b=['dnc', 'cds', 'dn']\n",
-        "a=['dnc']\n",
-        "contador_x(a,b,'dnc')\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "i7VqYGQesUfx"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
